<resources>
    <string name="app_name">作品集</string>
    <string name="main_fragment_name">首页</string>
    <string name="works_fragment_name">我的作品</string>
    <string name="self_fragment_name">个人中心</string>
    <string name="login_by_weixin">微信登录</string>
    <string name="login_by_qq">QQ登录</string>
    <string name="login_by_weibo">微博登录</string>
    <string name="login_text">登录</string>
    <string name="register_name">注册</string>
    <string name="forget_pwd_name">忘记密码</string>
    <string name="input_user_name">邮箱</string>
    <string name="input_user_pwd">密码</string>
    <string name="not_implement">暂未实现</string>
    <string name="login_success_text">登录成功</string>
    <string name="login_failed_text">登录失败</string>
    <string name="followee_list_title">关注人列表</string>
    <string name="works_count">作品数目：%1$s</string>
    <string name="publish_image_btn_name">发布图片</string>
    <string name="publish_video_btn_name">发布视频</string>
    <string name="publish_audio_btn_name">发布音频</string>
    <string name="publish_paper_btn_name">发布文章</string>
    <string name="category_image">摄影</string>
    <string name="category_video">微电影</string>
    <string name="category_audio">音乐</string>
    <string name="category_paper">文章</string>
    <string name="loading_text">加载中...</string>
    <string name="get_data_failed">获取数据失败</string>
    <string name="has_follow_text">已关注</string>
    <string name="cancel_follow_text">取消关注</string>
    <string name="operation_failed">操作失败</string>
    <string name="select_work_btn">选择图片、音频或视频</string>
    <string name="upload_btn">点击上传</string>
    <string name="status_title_hint">题目</string>
    <string name="status_content_hint">内容</string>
    <string name="send_status_btn">发表作品</string>
    <string name="logout_title">退出登录</string>
    <string name="select_image_title">选择一张图片</string>
    <string name="select_video_title">选择一个视频</string>
    <string name="select_audio_title">选择一个音频</string>
    <string name="send_status_successful">发表作品成功</string>
    <string name="send_status_failed">发布作品失败</string>
    <string name="upload_file_successful">上传文件成功</string>
    <string name="upload_file_failed">上传文件失败</string>
    <string name="show_user_btn_text">查看作者</string>
    <string name="share">分享</string>
    <string name="add_follow_text">添加关注</string>
    <string name="please_login">请先登录</string>
    <string name="about">关于</string>
    <string name="please_input_title">请输入题目</string>
    <string name="please_input_message">请输入内容</string>
    <string name="input_user_pwd_again">确认密码</string>
    <string name="upload_avatar_btn">点击选择头像</string>
    <string name="please_input_pwd">请输入密码</string>
    <string name="pwd_not_equal_pwd_again">两次输入密码不一致</string>
    <string name="please_input_username">请输入用户名</string>
    <string name="please_select_avatar">请选择一张图片作为头像</string>
    <string name="register_successful">注册成功</string>
    <string name="register_failed">注册失败</string>
    <string name="tutorial_main_tab">在这里可以欣赏其他人的作品哟~</string>
    <string name="tutorial_work_tab">在这里可以发表和查看自己的作品哦~</string>
    <string name="tutorial_self_tab">这里可以查看个人信息~</string>
    <string name="sure_logout">确认退出?</string>

</resources>
