<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_80_transparent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="20dp">

        <Button
            android:id="@+id/publish_image"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top|left"
            android:text="@string/publish_image_btn_name" />

        <Button
            android:id="@+id/publish_video"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top|right"
            android:text="@string/publish_video_btn_name" />

        <Button
            android:id="@+id/publish_audio"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left"
            android:text="@string/publish_audio_btn_name" />

        <Button
            android:id="@+id/publish_paper"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:text="@string/publish_paper_btn_name" />

    </FrameLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>