<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:src="@drawable/shape_bottom_bar_icon_selected" />

    <LinearLayout
        android:id="@+id/name_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/image"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/transparent" />

        <TextView
            android:id="@+id/follow_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_container"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/image">

        <TextView
            android:id="@+id/category1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:background="@drawable/shape_category_bg"
            android:text="@string/category_image"/>

        <TextView
            android:id="@+id/category2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:background="@drawable/shape_category_bg"
            android:text="@string/category_video"/>

        <TextView
            android:id="@+id/category3"
            android:text="@string/category_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:background="@drawable/shape_category_bg" />

        <TextView
            android:id="@+id/category4"
            android:layout_width="wrap_content"
            android:text="@string/category_paper"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:background="@drawable/shape_category_bg" />
    </LinearLayout>

</RelativeLayout>