<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bottombar="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.MainActivity">

    <include layout="@layout/toolbar" />

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/black_30_transparent" />

    <com.ysyao.bottomtabbar.BottomTextViewGroup
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:background="@color/white_80_transparent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.ysyao.bottomtabbar.SelectableBottomTextView
            android:id="@+id/main_tab"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/main_fragment_name"
            android:textSize="12sp"
            bottombar:default_selected="true"
            bottombar:selected_icon="@drawable/shape_bottom_bar_icon_selected"
            bottombar:text_selected_color="@color/selected"
            bottombar:text_unselected_color="@color/black_80_transparent"
            bottombar:unselected_icon="@drawable/shape_bottom_bar_icon" />

        <com.ysyao.bottomtabbar.SelectableBottomTextView
            android:id="@+id/works_tab"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/works_fragment_name"
            android:textSize="12sp"
            bottombar:default_selected="false"
            bottombar:selected_icon="@drawable/shape_bottom_bar_icon_selected"
            bottombar:text_selected_color="@color/selected"
            bottombar:text_unselected_color="@color/black_80_transparent"
            bottombar:unselected_icon="@drawable/shape_bottom_bar_icon" />

        <com.ysyao.bottomtabbar.SelectableBottomTextView
            android:id="@+id/self_tab"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/self_fragment_name"
            android:textSize="12sp"
            bottombar:default_selected="false"
            bottombar:selected_icon="@drawable/shape_bottom_bar_icon_selected"
            bottombar:text_selected_color="@color/selected"
            bottombar:text_unselected_color="@color/black_80_transparent"
            bottombar:unselected_icon="@drawable/shape_bottom_bar_icon" />
    </com.ysyao.bottomtabbar.BottomTextViewGroup>
</LinearLayout>
